fixed footer spacing from bottom

--- a/css/help.css
+++ b/css/help.css
@@ -4,7 +4,7 @@
 }
 
 #content-wrap {
-  padding-bottom: 7rem;
+  padding-bottom: 10rem;
 }
 
 h1{
@@ -51,7 +51,7 @@ h2{
   font-size: 22px;
   margin: auto;
   width: 80%;
-  font-family: 'Manrope'
+  font-family: 'Manrope';
 
 }
 
@@ -62,6 +62,7 @@ h2{
 }
 
 #footer{
+  
   position: absolute;
   bottom:0;
   width:100%;
